--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,6 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <!--<docker.image.name>checkers_app</docker.image.name>-->
-        <!--<docker.image.tag>latest</docker.image.tag>-->
     </properties>
 
     <dependencies>
@@ -58,10 +56,10 @@
             <version>3.3.7</version>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-starter-security</artifactId>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
