PostgreSQL and Flyway added.

--- a/pom.xml
+++ b/pom.xml
@@ -86,8 +86,15 @@
         </dependency>
 
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.4.1212</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>4.2.0</version>
         </dependency>
 
         <!-- Test -->
@@ -106,6 +113,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
